# boatrace-ai

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: setup_check.yml  tests.yml
docs/: historical_etl_schema_v1.md  payout_schema_v1_draft.md
scripts/: process_month.py  setup_check.py
src/boatrace_ai/: __init__.py
src/boatrace_ai/audits/: __init__.py  payout_semantics.py  period.py
src/boatrace_ai/ingestion/: __init__.py  daily_archives.py
src/boatrace_ai/parsers/: __init__.py  payout.py  program.py  result.py
src/boatrace_ai/pipelines/: daily_etl.py  monthly_etl.py
tests/: test_daily_archives.py  test_daily_etl.py  test_daily_etl_payouts.py  test_june_2026_regressions.py  test_monthly_etl.py  test_parser_regressions.py  test_payout_parser.py  test_payout_semantic_audit.py  test_period_audit.py  test_program_parser.py  test_program_parser_boat_rate_100.py  test_result_parser.py
